# spicenet

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
code/basis_functions/: spicenet_network.m  tuning_curve_noise.m  tuning_curve_noiseless.m
code/demo_road_traffic/: relation_fits_traffic.mat  usup_rel_learn_net.m  visualize_runtime.m  visualize_runtime_traffic_setup.m
code/embedded/: create_test_data.py  embedded.ipynb  hebbian_correlation_matrix.py  presentation.ipynb  spice_net_som.py  weather_example.ipynb
code/embedded/spice_net/: spice_net.py  spice_net_hcm.py  spice_net_som.py
code/generic/: corr_learn_net_som.m  create_init_network.m  parametrize_learning_law.m  present_tuning_curves.m  randnum_gen.m  visualize_results.m  visualize_runtime.m
code/generic_gui/: README.md  UI.py  function.py  main.py  mainthread.py  matplot.py  test.py  untitled.ui
code/generic_slim/: sample_nonlinear_data.csv  spicenet-slim-core.ipynb
code/generic_slim_extended/: usup_rel_learn_net.m
code/population_coding/: G_map.m  gauss_tuning.m  gauss_val.m  generate_population.m  init_population.m  normalize_activity.m  phi.m  pop_code_demo.m  sigmoid.m
code/python_package/: presentation.ipynb  weather_example.ipynb
code/python_package/data/: solar_pannel_data.csv  test_data_2.csv
code/python_package/spice_net/: __init__.py  spice_net.py  spice_net_hcm.py
code/spiking/: spicenet-nengo-notebook.ipynb  spicenet-nengo.py
notebooks/data/: fake_temp.csv  test_data.csv
src/spice_net/: spice_net.py  spice_net_som.py
(+11 files in other folders)
